[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Title_Screen/ExitButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Audio/Inframuno_6.wav" type="AudioStream" id=2]
[ext_resource path="res://Scenes/Title_Screen/NewGameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/VCR_OSD_MONO_1.001(18).tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/Title_Screen/Fade_In.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Title_Screen/NewGame.gd" type="Script" id=6]
[ext_resource path="res://Assets/logo.png" type="Texture" id=7]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 725.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1110.0
margin_bottom = 181.0
texture = ExtResource( 7 )
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 500.0
margin_right = 1160.0
margin_bottom = 728.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 1040.0
margin_bottom = 228.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGameButton" parent="HBoxContainer/Buttons" instance=ExtResource( 3 )]
margin_top = 44.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 4 )

[node name="ExitButton" parent="HBoxContainer/Buttons" instance=ExtResource( 1 )]
margin_top = 124.0
margin_bottom = 184.0

[node name="FadeIn" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Label" type="Label" parent="."]
modulate = Color( 0.615686, 0.180392, 0.180392, 1 )
margin_left = 122.558
margin_top = 220.0
margin_right = 1162.56
margin_bottom = 680.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "

In the end, Alain traveled to unknown lands and felt what we all, eventually, will see. His transit to this world has not ended and, with it, his immortal soul has not yet reached its fullness. 
Alain lived his full life and, after all, was able to be with his beloved wife forever, finally forming an immortal soul. 

They never lived alone
Immortality embraced them both. 

"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[connection signal="pressed" from="HBoxContainer/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="HBoxContainer/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
